--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content="Front End Developer"/>
     <meta property="og:image" content="img/site-ss.png"/>
-    <meta property="og:url" content="#"/>
+    <meta property="og:url" content="https://zawmyonaing27.github.io/Marketing/"/>
     <meta property="og:site_name" content="Zaw Myo Naing's Portfolio"/>
-    <meta property="og:description" content="Student Projects"/>
+    <meta property="og:description" content="Study Project"/>
 
     <style>
         .loader-container{
