--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                             <div class="col-12">
                                 <div class="pb-5 text-white fs-6 d-flex flex-column flex-md-row justify-content-between">
                                     <span>@Copyright Marketing.. All Rights Reserved</span>
-                                    <span>Develop by <a href="#" class="text-light ">Zaw Myo Niang</a></span>
+                                    <span>Develop by <a href="#" class="text-light ">Zaw Myo Niang</a> .Front end developer</span>
                                 </div>
                             </div>
                         </div>
